# drawDatabase

./: Makefile  README.MD
backend/: .air.toml  Cargo.toml  connections.json  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/app/data/: service.go
backend/internal/app/database/: service.go
backend/internal/app/layout/: service.go
backend/internal/app/schema/: service.go
backend/internal/config/: config.go
backend/internal/database/: database.go
backend/internal/domain/: entities.go
backend/internal/handlers/: data_handler.go  database_handler.go  handlers.go  health_handler.go  layout_handler.go  table_handler.go
backend/internal/models/: requests.go  schema.go
backend/internal/repository/mysql/: mysql.go
backend/internal/routes/: routes.go
backend/internal/services/: data_service.go  database_service.go  layout_service.go  schema_service.go  table_service.go
backend/internal/transport/http/handlers/: connection_handler.go  data_handler.go  database_handler.go  health_handler.go  layout_handler.go  schema_handler.go
backend/internal/transport/http/routes/: routes.go
frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: TableNode.vue
frontend/src/composables/: useConnection.ts  useDiagram.ts  useSchema.ts
frontend/src/lib/: sqlGenerator.ts
frontend/src/store/: useCanvasStore.ts  (+2 more)
frontend_old/: package-lock.json  package.json
frontend_old/src/: App.vue
(+44 files in other folders)
