[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"

# Async Runtime (Mesin penggerak)
tokio = { version = "1", features = ["full"] }

# JSON Processing (Agar bisa baca/tulis JSON)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CORS (Agar Vue bisa akses tanpa diblokir)
tower-http = { version = "0.5", features = ["cors"] }

# Database (Kita siapkan tempatnya, tapi disable dulu biar compile cepat)
# sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "postgres", "any"] }
